package pers.prover07.dp.structural.decorator;

/**
 * 具体构件
 * @author 小丶木曾义仲丶哈牛柚子露丶蛋卷
 * @version 1.0
 * @date 2022/5/14 22:09
 */
public class FriedNoodles extends Food {

    public FriedNoodles() {
        super("炒面", 8);
    }
}
