package pers.prover07.dp.structural.decorator;

/**
 * 具体构件
 * @author 小丶木曾义仲丶哈牛柚子露丶蛋卷
 * @version 1.0
 * @date 2022/5/14 22:08
 */
public class FriedRice extends Food{

    public FriedRice() {
        super("炒饭", 10);
    }

}
